--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
 	</properties>
 
 	<dependencies>
+
+		<!-- dependency for progress bar -->
+		<dependency>
+			<groupId>me.tongfei</groupId>
+			<artifactId>progressbar</artifactId>
+			<version>0.7.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
