--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # H2 database
 spring.datasource.url=jdbc:h2:~/betting_crawler
+spring.h2.console.enabled=true
 
 # Spring Data REST properties
 spring.data.rest.base-path=/api
