--- a/pom.xml
+++ b/pom.xml
@@ -83,12 +83,20 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- dependency for JSOUP -->
+		<!-- dependency for Jsoup -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.11.3</version>
 		</dependency>
+
+		<!-- dependency for Selenium -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.14.0</version>
+		</dependency>
+
 
 	</dependencies>
 
